Update styles to avoid extra-tall footers and any white space under them.

--- a/app/assets/stylesheets/partials/_footer.scss
+++ b/app/assets/stylesheets/partials/_footer.scss
@@ -5,7 +5,6 @@
 	border-top: solid #303030 0;
 	color:#fff!important;
 	width: 100%;
-	height: 100%;
 	color: #666;
 	margin-top: 42px;
 	.row {
